[gd_scene load_steps=8 format=3 uid="uid://djdreisjeu2dd"]

[ext_resource type="Script" uid="uid://yoi3kme3ks5m" path="res://Enemy/shooting_enemy.gd" id="1_41cca"]
[ext_resource type="Texture2D" uid="uid://db14sin7gnd47" path="res://Textures/Enemy/neon_shooter_sprite_2frames_bez_tla.png" id="1_m653l"]
[ext_resource type="PackedScene" uid="uid://dcqcpl0qq20rt" path="res://utility/hit_box.tscn" id="3_wf2ms"]
[ext_resource type="PackedScene" uid="uid://7ywnno2cpwrg" path="res://utility/hurt_box.tscn" id="4_noh8g"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_41cca"]
radius = 6.0
height = 24.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_3gc2n"]
radius = 9.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_odi81"]
size = Vector2(18, 29)

[node name="Shooting_enemy_v2" type="CharacterBody2D" groups=["enemies"]]
light_mask = 5
visibility_layer = 5
collision_layer = 5
collision_mask = 5
script = ExtResource("1_41cca")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0.5, 0)
scale = Vector2(1.01563, 1)
texture = ExtResource("1_m653l")
hframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
light_mask = 5
visibility_layer = 5
position = Vector2(3, -1)
shape = SubResource("CapsuleShape2D_41cca")

[node name="WalkTImer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.2
one_shot = true

[node name="HitBox" parent="." instance=ExtResource("3_wf2ms")]
collision_layer = 2

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2(3, 0)
shape = SubResource("CapsuleShape2D_3gc2n")

[node name="HurtBox" parent="." instance=ExtResource("4_noh8g")]
collision_mask = 4

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2(3, -0.5)
shape = SubResource("RectangleShape2D_odi81")

[node name="DisableTImer" parent="HurtBox" index="1"]
one_shot = true

[node name="Node2D" type="Node2D" parent="."]

[node name="ShootTImer" type="Timer" parent="Node2D"]
unique_name_in_owner = true
wait_time = 1.5

[node name="ShootAttackTimer" type="Timer" parent="Node2D/ShootTImer"]
unique_name_in_owner = true
wait_time = 0.075

[connection signal="hurt" from="HurtBox" to="." method="_on_hurt_box_hurt"]
[connection signal="timeout" from="Node2D/ShootTImer" to="." method="_on_shoot_t_imer_timeout"]
[connection signal="timeout" from="Node2D/ShootTImer/ShootAttackTimer" to="." method="_on_shoot_attack_timer_timeout"]

[editable path="HitBox"]
[editable path="HurtBox"]
